--- a/less/_general-media.less
+++ b/less/_general-media.less
@@ -84,7 +84,7 @@
     /* Breadcrums */
     
     .breadcrumbs {
-        margin: 32px 0px 24px;
+        margin: 10px 0px 20px;
     }
     
     /* //Breadcrums */
@@ -242,7 +242,7 @@
     /* Breadcrums */
     
     .breadcrumbs {
-        margin: 16px 0px;
+        display: none;
     }
     
     /* //Breadcrums */
