--- a/less/_main-block-media.less
+++ b/less/_main-block-media.less
@@ -1236,6 +1236,36 @@
     }
     
     /* //Gallery */
+    
+    /* Order page */
+    
+    .order-page__container {
+        margin: 100px auto;
+    }
+    
+    .order-page__caption {
+        margin-top: 30px;
+    }
+    
+    .order-page__item__header {
+        .date {
+            font-size: 16px;
+        }
+    } 
+    
+    .order-page__item__body {
+        font-size: 16px;
+    }
+    
+    /* //Order page */
+    
+    /* Page quiz */
+
+    .page-quiz {
+        margin-bottom: 50px;
+    }
+    
+    /* //Page quiz */
 }
 
 
@@ -2341,6 +2371,39 @@
     }
     
     /* //Gallery */
+    
+    /* Order page */
+    
+    .order-page__container {
+        margin: 50px auto;
+    }
+    
+    .order-page__caption {
+        margin-top: 20px;
+    }
+    
+    .order-page__item__info {
+        padding: 20px;
+        margin-left: 20px;
+    }
+    
+    /* //Order page */
+    
+     /* Page quiz */
+    
+    .page-quiz__form {
+        margin-top: 30px;
+    }
+
+    .page-quiz__form__caption {
+        font-size: 18px;
+    }
+    
+    .page-quiz__sub-text {
+        margin-top: 10px;
+    }
+    
+    /* //Page quiz */
 }
 
 @media screen and (max-width: 576px) {
@@ -2784,4 +2847,16 @@
     }
     
     /* //Gallery */
+    
+    /* Order page */
+    
+    .order-page__item__body {
+        flex-direction: column;
+        
+        .price__wrapper {
+            margin: 15px 0px 0px auto;
+        }
+    }
+    
+    /* //Order page */
 }
