--- a/less/_general-style.less
+++ b/less/_general-style.less
@@ -262,6 +262,10 @@ body {
     }
 }
 
+.main_input-drop {
+    cursor: pointer;
+}
+
 .main_input-textarea {
     height: 140px;
     padding-top: 15px;
@@ -368,17 +372,9 @@ body {
         
     &:checked {
         + .custome-check {
-            // border-color: #5C5DF7;
-            // background-color: #5C5DF7;
-            
             .icon-active {
                 opacity: 1;
             }
-            
-            // ~ .text {
-            //     color: #5C5DF7;
-            //     text-shadow: 0.1px 0 0 #5C5DF7;
-            // }
         }
     }
 }
@@ -398,7 +394,7 @@ body {
     
     .icon-active {
         content: "";
-        font-size: 6px;
+        font-size: 8px;
         position: absolute;
         left: 50%;
         top: 50%;
@@ -412,9 +408,6 @@ body {
 .general-drop {
     .wrapper {
         position: relative;
-    }
-    
-    .main-input {
         cursor: pointer;
     }
     
@@ -423,7 +416,7 @@ body {
         right: 20px;
         top: 50%;
         transform: translateY(-50%);
-        font-size: 10px;
+        font-size: 8px;
         transition: transform .4s;
     }
     
@@ -475,9 +468,9 @@ body {
 }
 
  .custome-radio {
-    width: 14px;
-    height: 14px;
-    border: 2px solid #5C5DF7;
+    width: 16px;
+    height: 16px;
+    border: 1px solid #3C4153;
     position: relative;
     border-radius: 50%;
     flex-shrink: 0;
@@ -487,8 +480,8 @@ body {
         position: absolute;
         left: 50%;
         top: 50%;
-        width: 8px;
-        height: 8px;
+        width: 10px;
+        height: 10px;
         transform: translate(-50%, -50%);
         background-color: #5C5DF7;
         opacity: 0;
@@ -621,7 +614,7 @@ body {
 /* Breadcrumbs */
 
 .breadcrumbs {
-    margin: 40px 0px 24px;
+    margin: 15px 0px 30px;
 }
 
 .breadcrumbs__list {
