--- a/less/_header-media.less
+++ b/less/_header-media.less
@@ -9,9 +9,12 @@
     }
 }
 
-@media (max-width: 1024px) {
-    .header__wrapper {
-        padding: 16px 20px;
+@media (max-width: 1200px) {
+    .user-authorization-img {
+        width: 28px;
+        height: 28px;
+        margin-left: auto;
+        margin-right: 20px;
     }
     
     .header__list {
@@ -19,7 +22,7 @@
         
         &.callback {
             display: flex;
-            margin-left: 0px;
+            margin: 0px auto;
         }
     }
     
@@ -33,7 +36,7 @@
         display: block;
         top: 0px;
         width: 385px;
-        left: auto;
+        left: -100%;
         right: 0px;
         height: 100vh;
         
@@ -42,6 +45,7 @@
         }
         
         &.active {
+            left: auto;
             animation: burger-media 0.8s;
         }
         
@@ -124,9 +128,21 @@
     }
 }
 
+@media screen and (max-width: 1024px) {
+    .header__wrapper {
+        padding: 16px 20px;
+    }
+    
+    .header__list {
+        &.callback {
+            font-size: 15px;
+        }
+    }
+}
+
 @media (max-width: 576px) {
     .header__wrapper {
-        padding: 8px 20px;
+        padding: 18px 20px;
     }
     
     .header__list {
