--- a/less/_header.less
+++ b/less/_header.less
@@ -1,12 +1,18 @@
 .header {
     width: 100%;
     position: relative;
+    z-index: 5;
     background-color: #FAFAFF;
     
     a {
         text-decoration: none;
     }
-    
+}
+
+.header-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .header__wrapper {
@@ -23,6 +29,16 @@
     font-size: 24px;
     line-height: 35px;
     letter-spacing: 0.05em;
+}
+
+.user-authorization-img {
+    width: 30px;
+    height: 30px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50%;
+    margin-left: 20px;
 }
 
 .header-burger {
