--- a/less/_main-block.less
+++ b/less/_main-block.less
@@ -896,27 +896,21 @@
     width: calc(33.333% - 30px);
     margin-right: 30px;
     cursor: pointer;
+}
+ 
+.noty-radio {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: -1;
+    opacity: 0;
     
-    .noty-radio {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        z-index: -1;
-        opacity: 0;
-        
-        &:checked {
-            + .custome-radio {
-                &::before {
-                    opacity: 1;
-                }
+    &:checked {
+        + .custome-radio {
+            &::before {
+                opacity: 1;
             }
         }
-    }
-    
-    label {
-        display: flex;
-        align-items: center;
-        cursor: pointer;
     }
 }
 
@@ -1352,7 +1346,7 @@
 
 .clients-callback {
     margin-top: 150px;
-    margin-bottom: 80px;
+    margin-bottom: 100px;
 }
 
 .clients-callback__wrapper {
@@ -3244,6 +3238,7 @@
 .filter__caption {
     font-size: 16px;
     line-height: 24px;
+    font-weight: 400;
 }
 
 /* //Filter */
@@ -3850,11 +3845,24 @@
 
 .order-page__container {
     max-width: 386px;
-    margin: 30px auto 50px;
+    margin: 150px auto;
+    
+    .main-caption-s {
+        margin-bottom: 20px;
+    }
     
     .input_wrapper {
         margin-bottom: 20px;
     }
+    
+    .main_button-color {
+        max-width: 250px;
+        margin: 0px auto;
+    }
+}
+
+.order-page__caption {
+    margin-top: 50px;
 }
 
 .order-page__check-event__filter {
@@ -3869,3 +3877,151 @@
         }
     }
 }
+
+.order-page__list {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+}
+
+.order-page__item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    cursor: pointer;
+    
+    &:last-child {
+        margin-bottom: 0px;
+    }
+    
+    .custome-radio {
+        width: 20px;
+        height: 20px;
+        
+        &::before {
+            width: 12px;
+            height: 12px;
+        }
+    }
+}
+
+.order-page__item__info {
+    display: flex;
+    flex-direction: column;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
+    padding: 30px;
+    margin-left: 30px;
+}
+
+.order-page__item__header {
+    display: flex;
+    justify-content: space-between;
+    font-weight: 700;
+    margin-bottom: 10px;
+    
+    .date {
+        font-size: 18px;
+        line-height: 27px;
+    }
+}
+
+.order-page__item__body {
+    display: flex;
+    font-size: 18px;
+    line-height: 120%;
+    
+    .text {
+        transition: color .4s;
+    }
+    
+    .price__wrapper {
+        width: auto;
+        margin: 0px 0px 0px 30px;
+        flex-shrink: 0;
+        
+        &.active {
+            .info-drop {
+                opacity: 1;
+                visibility: visible;
+                transition: opacity 0.4s, visibility 0s 0s;
+            }
+        }
+    }
+}
+
+/* //Order page */
+
+/* Page quiz */
+
+.page-quiz {
+    margin-bottom: 100px;
+}
+
+.page-quiz__sub-text {
+    line-height: 130%;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.page-quiz__form {
+    max-width: 400px;
+    margin: 40px auto 0px;
+    
+    .checkbox__wrapper {
+        margin-bottom: 20px;
+        font-size: 16px;
+        line-height: 130%;
+        
+        &:last-child {
+            margin-bottom: 0px;
+        }
+    }
+    
+    .custome-check {
+        margin-right: 20px;
+    }
+    
+    .input_wrapper {
+        margin-bottom: 20px;
+        
+        &:last-child {
+            margin-bottom: 0px;
+        }
+    }
+    
+    .main_button-color {
+        margin: 20px auto 0px;
+        max-width: 250px;
+    }
+}
+
+.page-quiz__form__radio,
+.page-quiz__form__checkbox {
+    margin-bottom: 30px;
+}
+
+.page-quiz__form__caption {
+    font-size: 20px;
+    line-height: 130%;
+    margin-bottom: 20px;
+}
+
+.radio-wrapper {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    cursor: pointer;
+    transition: color .4s;
+    
+    &:last-child {
+        margin-bottom: 0px;
+    }
+    
+    .text {
+        margin-left: 20px
+    }
+}
+
+/* //Page quiz */
