--- a/less/_main-block-media.less
+++ b/less/_main-block-media.less
@@ -102,6 +102,16 @@
             }
         }
     }
+    
+    /* //Blog page */
+    
+    /* Event page */
+    
+    .event-page__sort-info__item {
+        margin-right: 0px !important;
+    }
+    
+    /* //Event page */
 }
 
 @media (max-width: 1024px) {
@@ -417,6 +427,12 @@
     
     /* Trust us */
     
+    .trust-us {
+        + .photo-gallery {
+            margin-bottom: 50px;
+        }
+    }
+    
     .trust-us__wrapper {
         margin-bottom: 100px;
     }
@@ -453,8 +469,17 @@
     
     /* Reviews */
     
+    .reviews {
+        padding: 50px 0px;
+        
+        + .notyfication {
+            margin-top: 50px;
+        }
+    }
+    
     .reviews__list {
         height: 241px;
+        margin-top: 30px;
     }
     
     .reviews__item {
@@ -1082,7 +1107,7 @@
     /* Corporate-event */
     
     .corporate-event {
-        margin-bottom: 100px;
+        margin-bottom: 50px;
     }
     
     .corporate-event__decor {
@@ -1107,7 +1132,7 @@
     /* Event page timer */
     
     .general-info-event {
-        margin-top: 100px;
+        margin-top: 50px;
     }
     
     .event-page__timer {
@@ -1591,6 +1616,10 @@
     
     /* Reviews */
     
+    .reviews {
+        padding: 25px 0px;
+    }
+    
     .reviews__wrapper {
         position: relative;
         padding-bottom: 48px;
@@ -1612,6 +1641,7 @@
         height: auto;
         flex-direction: column;
         margin-bottom: -20px;
+        margin-top: 20px;
     }
     
     .reviews__item {
@@ -2254,10 +2284,6 @@
     
     /* Corporate-event */
     
-    .corporate-event {
-        margin-bottom: 50px;
-    }
-    
     .corporate-event__wrapper {
         flex-direction: column;
     }
@@ -2276,10 +2302,6 @@
     /* Corporate event */
 
     /* Event page timer */
-    
-    .general-info-event {
-        margin-top: 50px;
-    }
     
     .general-info-event__wrapper {
         flex-direction: column;
