--- a/less/_general-style.less
+++ b/less/_general-style.less
@@ -681,3 +681,45 @@ body {
 }
 
 /* Breadcrumbs */
+
+/* Decor background */
+
+body {
+    position: relative;
+}
+
+.background-decor {
+    position: absolute;
+    left: 50%;
+    top: 0px;
+    transform: translateX(-50%);
+    max-width: 1170px;
+    width: 100%;
+    height: 100%;
+    border-left: 1px solid #EFEFF7;
+    border-right: 1px solid #EFEFF7;
+    z-index: -1;
+}
+
+.background-decor__inner {
+    position: absolute;
+    left: 50%;
+    top: 0px;
+    max-width: 600px;
+    width: 100%;
+    height: 100%;
+    transform: translateX(-50%);
+    border-left: 1px solid #EFEFF7;
+    border-right: 1px solid #EFEFF7;
+    
+    &::before {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 0px;
+        transform: translateX(-50%);
+        height: 100%;
+        width: 1px;
+        background-color: #EFEFF7;
+    }
+}
