--- a/less/_main-block.less
+++ b/less/_main-block.less
@@ -25,7 +25,7 @@
 
 .main-section__decor {
     width: calc(50% - 15px);
-    height: 380px;
+    height: 400px;
     z-index: 1;
     background-position: center;
     background-repeat: no-repeat;
@@ -673,6 +673,12 @@
 
 /* Trust us */
 
+.trust-us {
+    + .photo-gallery {
+        margin-bottom: 75px;
+    }
+}
+
 .trust-us__wrapper {
     margin-bottom: 150px;
 }
@@ -743,7 +749,12 @@
 /* Reviews */
 
 .reviews {
-
+    background: #FFFFFF;
+    padding: 75px 0px;
+    
+    + .notyfication {
+        margin-top: 75px;
+    }
 }
 
 .reviews__header {
@@ -1833,7 +1844,7 @@
     display: flex;
     justify-content: space-between;
     background-color: #FFFFFF;
-    padding: 30px 70px 30px 0px;
+    padding: 30px 80px 30px 0px;
 }
 
 .event-page__sort-info__item {
@@ -1843,9 +1854,15 @@
     position: relative;
     
     &:first-child {
+        margin-right: 30px;
+        
         &::before {
             display: none;
         }
+    }
+    
+    &:nth-child(2) {
+        margin-right: 20px;
     }
     
     &::before {
@@ -2142,7 +2159,7 @@
 
 .reserve-place__main-img {
     width: 549px;
-    height: 512px;
+    height: 525px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -2232,7 +2249,7 @@
     background-position: center;
     background-repeat: no-repeat;
     margin-right: 20px;
-    width: 31.7%;
+    width: 32%;
     height: 367px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     transform: translateX(-50px);
@@ -2268,7 +2285,7 @@
     }
     
     &:nth-child(6) {
-        width: 23.2%;
+        width: 23.5%;
         height: 366px;
         transform: translateX(50px);
         margin-right: 0px;
@@ -2280,7 +2297,7 @@
 /* Corporate-event */
 
 .corporate-event {
-    margin-bottom: 150px;
+    margin-bottom: 75px;
 }
 
 .corporate-event__wrapper {
@@ -2328,7 +2345,7 @@
             content: "";
             position: absolute;
             top: -5px;
-            left: -22px;
+            left: -20px;
             width: 27px;
             height: 55px;
             background: #F0F0FA;
@@ -2352,7 +2369,7 @@
 /* Event page timer */
 
 .general-info-event {
-    margin-top: 150px;
+    margin-top: 75px;
 }
 
 .general-info-event__wrapper {
