--- a/less/_general-media.less
+++ b/less/_general-media.less
@@ -246,6 +246,10 @@
     }
     
     /* //Seo block */
+    
+    .background-decor {
+        max-width: 280px;
+    }
 }
 
 @media screen and (max-width: 576px) {
