--- a/less/_popup-media.less
+++ b/less/_popup-media.less
@@ -23,6 +23,7 @@
         font-size: 20px;
         line-height: 130%;
         margin-bottom: 20px;
+        min-height: 52px;
     }
     
     .popup-gallery__city {
@@ -125,6 +126,7 @@
         font-size: 16px;
         line-height: 130%;
         margin-bottom: 10px;
+        min-height: 40px;
     }
     
     .popup-gallery__city {
